# django-antipatterns

./: .gitignore  .travis.yml  CNAME  LICENSE  Makefile  README.md  antipattern.html  codeflow.md  compare_templates.sh  continue.sh  difference-between.html  difference_between.html  django-antipatterns.cabal  index.html  install.sh  layers  new-item  pattern.html  rewrite.sh  script.js  sitemap.xml  stack.yaml  style.css  toc.sh  troubleshooting.html
.github/: FUNDING.yml
antipattern/: a-get-request-with-side-effects.html  a-get-request-with-side-effects.md  a-model-with-a-model-suffix.html  a-model-with-a-model-suffix.md  a_get_request_with_side_effects.html  calling-all-before-count-or-filter.html  calling-all-before-count-or-filter.md  chaining-querysets-together.html  chaining-querysets-together.md  checking-if-an-object-is-created-with-instance-pk.html  checking-if-an-object-is-created-with-instance-pk.md  checking-ownership-through-the-userpassestestmixin.html  checking-ownership-through-the-userpassestestmixin.md  checking-request-method-with-if-request-post.html  checking-request-method-with-if-request-post.md  constructing-a-new-form-when-validation-fails.html  constructing-a-new-form-when-validation-fails.md  constructing_a_new_form_when_validation_fails.html  data-duplication.html  data-duplication.md  fetching-the-logged-in-user-with-a-query.html  fetching-the-logged-in-user-with-a-query.md  fill-the-primary-key-gaps.html  fill-the-primary-key-gaps.md  filter-on-arbitrary-input-like-request-get.html  filter-on-arbitrary-input-like-request-get.md  imports.md  (+68 more)
(+156 files in other folders)
