name:                django-antipatterns
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/hapytex/django-antipatterns#readme
license:             BSD3
license-file:        LICENSE
author:              Willem Van Onsem
maintainer:          hapytexteu+gh@gmail.com
copyright:           2021 Willem Van Onsem
category:            web
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

executable django-antipatterns
  hs-source-dirs:      src
  main-is:             Main.hs
  default-language:    Haskell2010
  build-depends:
      base >= 4.7 && < 5
    , HaTeX
    , text
